WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221762
cursor: pointer is not appearing on <area> element used in conjunction <img usemap="...">
https://bugs.webkit.org/show_bug.cgi?id=221762
Summary
cursor: pointer is not appearing on <area> element used in conjunction <img u...
alehm
Reported
2021-02-11 10:28:05 PST
Please see a small demo here:
https://jsfiddle.net/d48r7bo1/
(taken from MDN web site) Try to hover different parts of the image (e.g. CSS, Graphics) and observe that a cursor has a default style. This works as intended in Chrome and FF. Please note, that <area> elements do not have `href` attributes (it works fine when `href` is declared).
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-02-18 10:29:12 PST
<
rdar://problem/74483873
>
Ahmad Saleem
Comment 2
2022-10-08 08:37:47 PDT
I tried to look into UA Stylesheet across all browsers but I couldn't find any reference:
https://wpt.fyi/results/html/rendering/the-css-user-agent-style-sheet-and-presentational-hints/mouse-cursor-imagemap.html?label=experimental&label=master&aligned
Only Firefox has something:
https://searchfox.org/mozilla-central/source/layout/style/res/html.css#669
img[usemap], object[usemap] { color: blue; } but nothing about "cursor".
Ahmad Saleem
Comment 3
2023-02-16 15:54:40 PST
By any chance - this is following blink fix?
https://src.chromium.org/viewvc/blink?view=revision&revision=152150
I haven't tried above commit locally.
Alexsander Borges Damaceno
Comment 4
2025-02-04 18:05:00 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40021
EWS
Comment 5
2025-02-10 08:47:41 PST
Committed
290169@main
(3445c01a99af): <
https://commits.webkit.org/290169@main
> Reviewed commits have been landed. Closing PR #40021 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug