cursor property is not applying on <area> element https://bugs.webkit.org/show_bug.cgi?id=221762

Reviewed by Ryosuke Niwa.

Match with other browsers behavior for area element.

The `<area>` element has `display: none` by default, so no renderer is set for it.
As a result, the cursor could not be looked up in the style object,
since we access the renderer to retrieve cursor information on each mouse event.
This is resolved by accessing the style information directly from the node object when dealing with `<area>` elements.

* Source/WebCore/page/EventHandler.cpp:
(WebCore::EventHandler::selectCursor):

Canonical link: https://commits.webkit.org/290169@main